Initial commit for rework to enable infinite scrolling. Fundamental changes to avoid using base64'ed images in html and instead refernce the local files produced by Gowitness in output folder. Additionally, utilzied waypoint, jquery, infiniteJS to produce infinite scroll effect.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "name": "GowitnessPage",
-    "pretty_name": "Gowitness Gallery",
+    "pretty_name": "GowitnessPage",
     "authors":[
         {
             "name": "jk-mayne",
